--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body{
     flex-direction: column;
     margin: 0;
     padding: 0;
+    flex: 1;
 }
 
 .section-1{
@@ -127,4 +128,44 @@ img{
     border-radius: 10px;
     flex: 0.75;
     margin-left: 0px;
+}
+
+/* Section - 3 */
+.section-3{
+    display: flex;
+    background-color: #E5E7EB;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.quote-container{
+    display: flex;
+    margin: 40px 80px;
+    /* border: solid black; */
+    flex-wrap: wrap;
+    width: 800px;
+    justify-content: flex-end;
+    text-align: center;
+}
+
+.quote-italicised{
+    color: #1F2937;
+    font-size: 36px;
+    font-weight: lighter;
+    font-style: italic;
+    margin-bottom: 0;
+    /* border: solid black; */
+}
+
+.author{
+    display: flex;
+    font-weight: bold;
+    /* flex: 1; */
+    font-size: 24px;
+    color: #1F2937;
+    justify-content: flex-end;
+    /* border: solid black; */
+    padding-left: 0;
+    margin-top: 0;
 }
